# NexusPKM

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/src/nexuspkm/: main.py
backend/src/nexuspkm/api/: apple_notes.py  chat.py  connectors.py  dashboard.py  engine.py  entities.py  jira.py  notifications.py  obsidian.py  outlook.py  providers.py  schedule.py  search.py
backend/src/nexuspkm/config/: __init__.py  loader.py  models.py
backend/src/nexuspkm/connectors/: __init__.py  base.py  registry.py  scheduler.py
backend/src/nexuspkm/engine/: __init__.py  chunking.py  contradiction.py  deduplication.py  entity_pipeline.py  extraction.py  extraction_queue.py  graph_store.py  index.py  ingestion.py  retrieval.py  vector_store.py
backend/src/nexuspkm/models/: __init__.py  chat.py  contradiction.py  document.py  entity.py  notification.py  relationship.py  schedule.py  search.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_transcript.vtt
backend/tests/integration/: test_api_chat.py  test_api_connectors.py  test_api_engine.py  test_api_search_integration.py  test_apple_notes_connector_integration.py  test_apple_notes_main_lifespan.py  test_entities_api.py  test_entity_pipeline.py  test_graph_store_integration.py  test_index_integration.py  test_ingestion_pipeline.py  test_jira_connector_integration.py  test_notifications_api.py  test_obsidian_connector_integration.py  test_outlook_connector_integration.py  test_retrieval_integration.py  test_teams_connector_integration.py  test_vector_store_integration.py
backend/tests/unit/: test_api_search.py  test_apple_notes_api.py  test_apple_notes_connector.py  test_apple_notes_html_converter.py  test_chunking.py  test_config.py  test_connector_registry.py  test_connectors_api.py  test_contradiction_detection.py  test_dashboard_api.py  test_entity_deduplication.py  test_entity_extractor.py  test_extraction_queue.py  test_graph_store.py  test_health.py  test_jira_api.py  test_jira_connector.py  test_models.py  test_ms_graph_auth.py  test_obsidian_api.py  test_obsidian_connector.py  test_obsidian_markdown_parser.py  test_outlook_api.py  test_outlook_connector.py  test_proactive_service.py  test_providers.py  test_retrieval.py  test_schedule_api.py  test_schedule_service.py  test_services_chat.py  test_sync_scheduler.py  test_teams_connector.py  test_vector_store.py  test_vtt_parser.py
(+190 files in other folders)
